Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for sg3_utils-1.45 [20190210] [svn: r811]
  - sg_ses: bug: --page= being overridden when --control
    and --data= also given; fix
  - sg_opcodes: expand MLU (spc5r20)
  - sg_write_buffer: allow comma and period separated
    lists when input from stdin
  - sg_format: add --dcrt used twice (FOV=1 DCRT=0)
  - sg_raw: fix --send bug when using stdin
  - sg_vpd: 3pc VPD page add copy group descriptor
  - sg_xcopy: add --fco (fast copy only) (spc5r20)
    - implement --app=1 (append) on regular OFILE type
  - sg_scan (win32): expand limits for big arrays
  - sg_lib: add sg_t10_uuid_desig2str()
    - tweak sg_pt interface to better handle bidi
    - sg_cmds_process_resp(): two arguments removed
  - sg_pt_freebsd: fixes for FreeBSD 12.0 release
  - linux: add nanosecond durations when
    SG3_UTILS_LINUX_NANO environment variable given
  - rescan-scsi-bus: widen LUN 0 only scanning
  - testing/sg_tst_async: fix free_list issue
  - testing/sg_tst_ioctl: for sg 4.0 driver
  - testing/sg_tst_bidi: for sg 4.0 driver
  - testing/sgs_dd: for share in sg 4.0 driver
  - testing/sgh_dd: rename of sgs_dd to avoid ...
  - testing/sgs_dd: back from archive, for testing
    SIGPOLL (SIGIO) and realtime (RT) signals
  - sg_pt: add sg_get_opcode_translation() to replace
    global pointer to array: sg_opcode_info_arr[]
  - utils/hxascdmp: add -o=<offset> option
  - sg_io_linux (sg_lib): add sg_linux_sense_print()
  - sg_pt_linux: uses sg v4 interface if sg driver
    >= 4.0.0 . Force sg v3 always by building with
    './configure --disable-linux-sgv4'
    - add sg_linux_get_sg_version() function
  - add: 'SPDX-License-Identifier: BSD-2-Clause'
    or a small number of 'GPL-2.0-or-later'

Changelog for sg3_utils-1.44 [20180912] [svn: r791]